[workspace]
members = ["crates/airbender-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[workspace.dependencies]
anyhow = "1"
bincode = "2"
clap = "4"
serde = "1"
sha3 = "0.10"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"

# execution_utils = { path = "../zksync-airbender/execution_utils" }
# gpu_prover = { path = "../zksync-airbender/gpu_prover" }
# risc_v_simulator = { path = "../zksync-airbender/risc_v_simulator" }
# riscv_transpiler = { path = "../zksync-airbender/riscv_transpiler" }
execution_utils = { git = "https://github.com/matter-labs/zksync-airbender", branch = "popzxc-eravm-airbender" }
gpu_prover = { git = "https://github.com/matter-labs/zksync-airbender", branch = "popzxc-eravm-airbender" }
risc_v_simulator = { git = "https://github.com/matter-labs/zksync-airbender", branch = "popzxc-eravm-airbender" }
riscv_transpiler = { git = "https://github.com/matter-labs/zksync-airbender", branch = "popzxc-eravm-airbender" }

[profile.release.package."blake2_with_compression_verifier"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release.package."keccak_special5_verifier"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release.package."bigint_with_control_verifier"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release]
lto = false
# This is needed for zksync-airbender crates to compile in a reasonable time for x86-64-unknown-linux-gnu
overflow-checks = true
