[package]
name = "airbender-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

execution_utils = { workspace = true, features = ["gpu_prover"] }
gpu_prover = { workspace = true }
risc_v_simulator = { workspace = true }
riscv_transpiler = { workspace = true, features = ["jit"] }
